@@ -4,15 +4,15 @@
   Copyright C 1999, 2000 Lionel Cons
   Copyright C 1999, 2000 Karl Berry
   Copyright C 1999, 2000 Olaf Bachmann
-  Copyright C 2002, 2003, 2004, 2005 Patrice Dumas
-  Copyright C 2001, 2002, 2003, 2004, 2005 Derek Price
+  Copyright C 2002, 2003, 2004, 2005, 2006, 2007 Patrice Dumas
+  Copyright C 2001, 2002, 2003, 2004, 2005, 2006 Derek Price
   Copyright C many others.
  
  
  Portions of this manual
   Copyright C 1999, 2000 Karl Heinz Marbaise (manual)
-  Copyright C 2003 Derek Price (manual)
-  Copyright C 2003, 2004, 2005 Patrice Dumas (manual)
+  Copyright C 2003, 2007 Derek Price (manual)
+  Copyright C 2003, 2004, 2005, 2006, 2007 Patrice Dumas (manual)
 
 
 Permission is granted to make and distribute verbatim
@@ -31,7 +31,7 @@ conditions for modified versions, except that this
 permission notice may be stated in a translation approved
 by the Free Software Foundation.
  -->
-<!-- Created on May, 8 2007 by texi2html @PACKAGE_VERSION@ -->
+<!-- Created on June, 1 2007 by texi2html 1.77 -->
 <!--
 Written by: Lionel Cons <Lionel.Cons@cern.ch> (original author)
             Karl Berry  <karl@freefriends.org>
@@ -48,7 +48,7 @@ Send bugs and suggestions to <texi2html-bug@nongnu.org>
 <meta name="keywords" content="Texi2HTML &ndash; Texinfo to HTML v1.77">
 <meta name="resource-type" content="document">
 <meta name="distribution" content="global">
-<meta name="Generator" content="texi2html @PACKAGE_VERSION@">
+<meta name="Generator" content="texi2html 1.77">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css">
 <!--
@@ -88,9 +88,9 @@ ul.toc {list-style: none}
 </p></td></tr>
 <tr><td> </td><td><p> Copyright &copy; 1999, 2000 Olaf Bachmann<br>
 </p></td></tr>
-<tr><td> </td><td><p> Copyright &copy; 2002, 2003, 2004, 2005 Patrice Dumas<br>
+<tr><td> </td><td><p> Copyright &copy; 2002, 2003, 2004, 2005, 2006, 2007 Patrice Dumas<br>
 </p></td></tr>
-<tr><td> </td><td><p> Copyright &copy; 2001, 2002, 2003, 2004, 2005 Derek Price<br>
+<tr><td> </td><td><p> Copyright &copy; 2001, 2002, 2003, 2004, 2005, 2006 Derek Price<br>
 </p></td></tr>
 <tr><td> </td><td><p> Copyright &copy; many others.<br>
 </p></td></tr>
@@ -102,9 +102,9 @@ ul.toc {list-style: none}
 </p></td></tr>
 <tr><td> </td><td><p> Copyright &copy; 1999, 2000 Karl Heinz Marbaise (manual)<br>
 </p></td></tr>
-<tr><td> </td><td><p> Copyright &copy; 2003 Derek Price (manual)<br>
+<tr><td> </td><td><p> Copyright &copy; 2003, 2007 Derek Price (manual)<br>
 </p></td></tr>
-<tr><td> </td><td><p> Copyright &copy; 2003, 2004, 2005 Patrice Dumas (manual)<br>
+<tr><td> </td><td><p> Copyright &copy; 2003, 2004, 2005, 2006, 2007 Patrice Dumas (manual)<br>
 </p></td></tr>
 </table>
 
@@ -7050,7 +7050,7 @@ text
 </tr></table>
 <h1>About This Document</h1>
 <p>
-  This document was generated by <em>Patrice Dumas</em> on <em>May, 8 2007</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html @PACKAGE_VERSION@</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>June, 1 2007</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html 1.77</em></a>.
 </p>
 <p>
   The buttons in the navigation panels have the following meaning:
@@ -7152,7 +7152,7 @@ text
 <hr size="1">
 <p>
  <font size="-1">
-  This document was generated by <em>Patrice Dumas</em> on <em>May, 8 2007</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html @PACKAGE_VERSION@</em></a>.
+  This document was generated by <em>Patrice Dumas</em> on <em>June, 1 2007</em> using <a href="http://www.nongnu.org/texi2html/"><em>texi2html 1.77</em></a>.
  </font>
  <br>
 
